class Idiomas {
    getMainMenuMessages() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }

    getSettingsMenuMessages() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }

    getLanguageMenuMessages() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }

    getPlayersMenuMessages() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }
    getGameModeMenuMessages() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }

    getCommonMessages() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }
    getBoardMenuMessages() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }

    getMessagesResumed() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }
    getMessagesGame() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }
    getMessagesPlayers() {
        throw new Error("Este método debe ser implementado por la subclase.");
    }
    dispatch(menuType, messagesMenu) {
        throw new Error("Este método debe ser implementado por la subclase.");
    }
}

export default Idiomas;

//