class Option {
    
    title;
    
    getTitle() {
        return this.title;
    }
    
    execute() {}
    
    updateTitle() {}
    
}

export default Option;